fix: middleware & spatie laravel-permission
